--- a/src/commands/commands.html
+++ b/src/commands/commands.html
@@ -13,7 +13,11 @@
     <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
     <!--<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>-->
     
-  <script type="text/javascript" src="https://stratec-it.github.io/PhishingAddin/src/commands/commands.js"></script>
+    <script type="text/javascript" src="https://stratec-it.github.io/PhishingAddin/src/commands/commands.js"></script>
+  
+  
+    <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/1.0/fabric.min.css">
+    <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/1.0/fabric.components.min.css">
   
 </head>
 
@@ -43,11 +47,7 @@
         </button>
 
     </div>
-    <div id="content-footer">
-        <div class="padding ms-font-m">
-            <a target="_blank" href="http://go.microsoft.com/fwlink/?LinkId=276814">Find more samples online...</a>
-        </div>
-    </div>
+
 </body>
 
 </html>
