--- a/src/commands/commands.html
+++ b/src/commands/commands.html
@@ -15,7 +15,8 @@
     
     <script type="text/javascript" src="https://stratec-it.github.io/PhishingAddin/src/commands/commands.js"></script>
   
-  
+    <link href="https://stratec-it.github.io/PhishingAddin/src/commands/commands.css" rel="stylesheet" type="text/css" />
+	
     <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/1.0/fabric.min.css">
     <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/1.0/fabric.components.min.css">
   
@@ -25,25 +26,19 @@
     <!-- Page content -->
     <div id="content-main">
         <div class="padding ms-font-xl">
-            <h3>Forwarder Sample</h3> 
+            <h3>Report Phishing Email</h3> 
 
-            <div style="float:left;width:10%;" class="ms-font-m">
-                To:&nbsp;
-            </div>
-            <div style="float:left;width:90%">
-                <input id="groupEmails" type="text" title="Enter addresses separated by semi-colons"/>
-            </div>
             <div style="float:left;width:10%;" class="ms-font-m">
                 Comment:&nbsp;
             </div>
             <div style="float:left;width:90%">
-                <input id="groupComment" type="text" title="Enter your message to be forwarded with the orginal"/>
+                <input id="groupComment" type="text" title="Please enter an optional comment"/>
             </div>
         </div>
         <button class="ms-Button ms-Button--hero" id="fowardToGroups">
             <span class="ms-Button-icon"><i class="ms-Icon ms-Icon--plus"></i></span>
-            <span class="ms-Button-label">Go!</span>
-            <span class="ms-Button-description">Forward the email</span>
+            <span class="ms-Button-label">Report!</span>
+            <span class="ms-Button-description">Report to STRATEC IT</span>
         </button>
 
     </div>
