--- a/src/commands/commands.html
+++ b/src/commands/commands.html
@@ -27,13 +27,16 @@
     <div id="content-main">
         <div class="padding ms-font-xl">
             <h3>Report Phishing Email</h3> 
-
+			<div>&nbsp;</div>
+			
             <div style="float:left;width:10%;" class="ms-font-m">
                 Comment:&nbsp;
             </div>
+			<div>&nbsp;</div>
             <div style="float:left;width:90%">
                 <input id="groupComment" type="text" title="Please enter an optional comment"/>
             </div>
+			<div>&nbsp;</div>
         </div>
         <button class="ms-Button ms-Button--hero" id="fowardToGroups">
             <span class="ms-Button-icon"><i class="ms-Icon ms-Icon--plus"></i></span>
