--- a/src/commands.html
+++ b/src/commands.html
@@ -33,7 +33,7 @@
 			<img src="../assets/ger_flag.jpg" class="flag" id="changeLanguage-DE">
 			
 			<div class="padding ms-font-xl">
-				<img src="https://www.stratec.com/files/stratec/img/logo-small.svg" alt="">
+				<img src="../assets/logo-small.svg" alt="">
 			</a>
 				<!-- Überschrift -->
 				<h3><u>Report Phishing Email</u></h3> 
@@ -152,7 +152,7 @@
 			<img src="../assets/eng_flag.jpg" class="flag" id="changeLanguage-EN">
 			
 			<div class="padding ms-font-xl">
-				<img src="https://www.stratec.com/files/stratec/img/logo-small.svg" alt="">
+				<img src="../assets/logo-small.svg" alt="">
 			</a>
 				<!-- Überschrift -->
 				<h3><u>Phishing Email melden</u></h3> 
