--- a/src/commands.html
+++ b/src/commands.html
@@ -1,3 +1,4 @@
+<!-- Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT License. -->
 
 <!DOCTYPE html>
 <html>
@@ -6,11 +7,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 
+	<!-- <script src="https://code.jquery.com/jquery-2.1.4.js"></script> -->
+	<!--<script type="text/javascript" src="./modules/jquery-2.1.4.js"></script>-->
 	<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 	
     <!-- Office JavaScript API -->
-    <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
-
+    <!-- <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script> -->
+	<script type="text/javascript" src="./modules/office.js"></script>
     <!--<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>-->
     
     <script type="text/javascript" src="./commands.js"></script>
@@ -18,8 +21,10 @@
   
     <link href="./commands.css" rel="stylesheet" type="text/css" />
 	
-    <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/1.0/fabric.min.css">
-    <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/1.0/fabric.components.min.css">
+    <!--<link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/1.0/fabric.min.css">-->
+	<link rel="stylesheet" href="./modules/fabric.min.css">
+    <!--<link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/1.0/fabric.components.min.css">-->
+	<link rel="stylesheet" href="./modules/fabric.components.min.css">
   
 </head>
 
